# headway

./: .bin-env-example  .earthlyignore  .env  .env-80  .env-example  .env.example  .env.sh  .gitignore  ARCHITECTURE.md  BUILD.md  DEBIAN_BUILD.md  Earthfile  FULL_PLANET.md  Makefile  README.md  VALUES.md  bboxes.csv  dagger.json  docker-compose-no-interp.yaml  docker-compose-with-transit.yaml  docker-compose.yaml  install_headway.debian.sh
.github/: FUNDING.yml
.github/workflows/: checks.yml  frontend-checks.yml  main.yml  push-branded-containers.yml  push-branded.yml  push-dev-containers.yml  push-latest-containers.yml  push.yml
builds/Bogota/: .env
builds/Seattle/: .env
builds/bogota/: .env  env.sh
builds/planet/: .env  env.sh  planet-241202.osm.pbf.aria2  prebuild.sh
builds/seattle/: .env  env.sh
contrib/: DEBIAN_BUILD.md  install_headway.debian.sh
dagger/: go.mod  go.sum  main.go  pelias.go  transit.go
data/: areas.csv
frontend/: README.md  package.json  quasar.config.js
frontend/src/: App.vue
geocoder/nominatim/: Dockerfile  import_wait_dump.sh  restore_then_start.sh
geocoder/nominatim_build/: .gitignore  Dockerfile  import_then_dump.sh
geocoder/photon/: .gitignore  Dockerfile  (+2 more)
git-hooks/: pre-commit
graphhopper/: Dockerfile  config.yaml  startup.sh
gtfs/: Dockerfile  download_gtfs_feeds.py
gtfs_build/: Dockerfile  download_gtfs_feeds.py
k8s/: deployment-config-example.yaml  elasticsearch-deployment.yaml  headway-deployment.yaml  headway-service.yaml  libpostal-deployment.yaml  libpostal-service.yaml  los-angeles.env  opentripplanner-deployment.yaml  pelias-api-deployment.yaml  placeholder-deployment.yaml  planet.env  seattle.env  tileserver-deployment.yaml  valhalla-deployment.yaml
mbtiles/: Dockerfile  download_mirrored_data.sh
mbtiles_build/: .gitignore  Dockerfile
osmosis/: Dockerfile
postgis_deploy/: Dockerfile  deploy.sh  load.sql
services/: areas.csv  init_container_dl.sh
services/pelias/openaddresses/: .gitignore  Cargo.toml
services/pelias/openaddresses/src/: lib.rs
services/transitmux/: Cargo.toml
services/transitmux/src/: cluster.rs  lib.rs  otp_api.rs  router.rs  util.rs
services/transitmux/src/api/: app_state.rs
services/transitmux/src/api/v2/: plan.rs
services/transitmux/src/otp/: mod.rs  otp_api.rs
services/transitmux/src/valhalla/: valhalla_api.rs  valhalla_router.rs
services/transitmux/tests/: v1_plan.rs  v2_plan.rs
services/travelmux/: Cargo.toml  LICENSE-MIT  README.md  init.sh
services/travelmux/src/: error.rs  lib.rs  util.rs
services/travelmux/src/api/: app_state.rs  health.rs  mod.rs
services/travelmux/src/api/v1/: plan.rs
services/travelmux/src/api/v2/: plan.rs
services/travelmux/src/api/v3/: plan.rs
services/travelmux/src/api/v4/: error.rs  mod.rs  plan.rs
services/travelmux/src/api/v5/: directions.rs  error.rs  haversine_segmenter.rs  mod.rs  osrm_api.rs  plan.rs  travel_modes.rs
services/travelmux/src/api/v6/: directions.rs  elevation.rs  error.rs  mod.rs  osrm_api.rs  plan.rs  travel_modes.rs
services/travelmux/src/elevation/: mod.rs  service.rs
services/travelmux/src/otp/: mod.rs  otp_api.rs  otp_cluster.rs  otp_router.rs
services/travelmux/src/util/: format.rs  haversine_segmenter.rs  mod.rs  serde_util.rs
services/travelmux/src/valhalla/: mod.rs  valhalla_api.rs
services/travelmux/tests/: v1_plan.rs  v2_plan.rs  v6_plan.rs
services/travelmux/tests/fixtures/low_res_elevation_tifs/: N47W123.tif  N52E012.tif  N52E013.tif  compress.sh
services/travelmux/tests/fixtures/requests/: opentripplanner_bicycle_plan.json  opentripplanner_plan_transit.json  opentripplanner_plan_transit_with_bike.json  opentripplanner_transit_plan.json  opentripplanner_transit_with_bicycle_plan.json  opentripplanner_walk_plan.json  refresh.sh  valhalla_auto_route.json  valhalla_bicycle_route.json  valhalla_pedestrian_route.json  valhalla_route_walk.json
tileserver/: .gitignore  Dockerfile
web/: .dockerignore  .gitignore  Dockerfile  init.sh  nginx.conf  nginx.conf.template
(+492 files in other folders)
