[package]
name = "travelmux"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
integration-tests = []

[dependencies]
actix-web = "4.5.1"
env_logger = "0.11.0"
geo = "0.28.0"
geojson = "0.24.0"
log = "0.4.17"
polyline = "0.10.1"
reqwest = { version = "0.11.13", features = ["json", "stream"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_repr = "0.1.18"
url = "2.4.0"
wkt = "0.10.3"

[dev-dependencies]
reqwest = { version = "0.11.13", features = ["json", "stream", "blocking"] }
approx = "0.5.1"
